# multichatbridge

./: .gitignore
discordbot/: Cargo.toml  config.example.json
discordbot/src/: config.rs  main.rs
microservice/: Cargo.toml  recreate_db.sh
microservice/database/migrations/: 20240205_create_tables.sql
microservice/database/sql/: config_add_or_update.sql  config_delete.sql  config_get_by_identifier.sql  config_get_by_server_id.sql  user_add.sql  user_delete.sql  user_get_all.sql  user_get_by_id.sql  user_update_authtoken.sql  user_update_serverlist.sql  user_update_serverlist_authtoken.sql
microservice/src/: config.rs  database.rs  database_utils.rs  handler.rs  main.rs  message.rs  socket.rs
microservice/src/ctx/: ctx_client.rs
microservice/src/handlers/: admin.rs  config.rs  not_found.rs  websocket.rs
microservice/src/middleware/: mod.rs  mw_auth_admin.rs  mw_auth_client.rs  mw_auth_websocket.rs
microservice/src/model/: config.rs  user.rs
microservice/src/routes/: admin.rs  config.rs  mod.rs  websocket.rs
microservice/src/websocket/: websocket_handler.rs
