[package]
name = "chatbridge-websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"]}
axum-extra = { version = "0.9.2", features = ["typed-header"]}
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "any", "macros" ] }
anyhow = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
sha2 = "0.10.8"
